--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,18 @@ repositories {
 
 def restAssured = "4.4.0",
     junitVersion = "5.8.2",
-    slf4jVersion = "1.7.32"
+    slf4jVersion = "1.7.32",
+    selenideVersion = '6.3.3',
+    jsonVersion = "20211205",
+    jacksonVersion = "2.13.1"
 
 dependencies {
     testImplementation(
             "io.rest-assured:rest-assured:$restAssured",
+            "com.codeborne:selenide:$selenideVersion",
             "org.assertj:assertj-core:3.22.0",
+            "org.json:json:$jsonVersion",
+            "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion",
             "org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testRuntimeOnly(
             "org.slf4j:slf4j-simple:$slf4jVersion",
